--- a/root.tex
+++ b/root.tex
@@ -45,14 +45,15 @@ Data-Efficient and Hardware-Efficient Decentralized Monocular Visual {SLAM}
 }
 
 
-\author{Jincheng Yu$^{1}$, Feng Gao$^{1}$, Jianfei Cao$^{1}$, Zhaoliang Zhang$^{1}$ and Yu Wang$^{1}$ % <-this % stops a space
+\author{Jincheng Yu$^{1}$, Feng Gao$^{1}$, Chao Yu$^{1}$, Lu Tian$^{2}$, Jianfei Cao$^{3}$, Zhaoliang Zhang$^{1}$, \\ Zhengfeng Huang$^{3}$, Yu Wang$^{1}$ and Huazhong Yang$^{1}$ % <-this % stops a space
 % \thanks{*This work was not supported by any organization} % <-this % stops a space
 \thanks{$^{1}$Electronic Engineering Department,
         Tsinghua University, Beijing, China
-        {\tt\small yjc16@mails.tsinghua.edu.cn}}%
-% \thanks{$^{2}$Bernard D. Researcheris with the Department of Electrical Engineering, Wright State University,
-%         Dayton, OH 45435, USA
-%         {\tt\small b.d.researcher@ieee.org}}%
+        {\tt\small yjc16@mails.tsinghua.edu.cn, yu-wang@tsinghua.edu.cn}}%
+\thanks{$^{2}$ Xilinx,Inc.(Beijing), Beijing, China}%
+\thanks{$^{3}$School of Microelectronics
+Hefei University of Technology
+Hefei,China}%
 }
 
 
@@ -76,7 +77,7 @@ Data-Efficient and Hardware-Efficient Decentralized Monocular Visual {SLAM}
 \input{src/background.tex}
 
 
-\section{Hardware-Software Co-design DSLAM}
+\section{Methodology}
 \input{src/hardsoft.tex}
 
 
