--- a/src/acknowledgment.tex
+++ b/src/acknowledgment.tex
@@ -1,1 +1,1 @@
-This work is not supported by any fund.
+This work was supported by National Natural Science Foundation of China (Grant No.61874156)
