--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -1,6 +1,6 @@
 @misc{Tech:2019360, 
-  title = {{Boards - Deephi Tech}}, 
-  url = {http://www.deephi.com/technology/boards}, 
+  title = {{DNNDK User Guide - Xilinx}}, 
+  url = {https://www.xilinx.com/support/documentation/user_guides/ug1327-dnndk-user-guide.pdf}, 
   read = {false}, 
   year = {2019}
 }
@@ -307,4 +307,21 @@
   pages={417--431},
   year={2018},
   publisher={IEEE}
+}
+
+@article{zhang2018graph,
+title={Graph-Based Place Recognition in Image Sequences with CNN Features},
+author={Zhang, Xiwu and Wang, Lei and Zhao, Yan and Su, Yan},
+journal={Journal of Intelligent \& Robotic Systems},
+pages={1--15},
+year={2018},
+publisher={Springer}
+}
+@inproceedings{pizzoli2014remode,
+  title={REMODE: Probabilistic, monocular dense reconstruction in real time},
+  author={Pizzoli, Matia and Forster, Christian and Scaramuzza, Davide},
+  booktitle={2014 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={2609--2616},
+  year={2014},
+  organization={IEEE}
 }
